Add AWS dynamic cluster management service

--- a/examples/dynamic_cloud_cluster.ipynb
+++ b/examples/dynamic_cloud_cluster.ipynb
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Import Packages and Budget Definition Sanity Sheck"
+    "##### Import Packages and Budget Definition Sanity Check"
    ]
   },
   {
@@ -483,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Execute Forever* (the controller is stateless, so you can always re-execute the notbook)"
+    "##### Execute Forever* (the controller is stateless, so you can always re-execute the notebook)"
    ]
   },
   {
