Add AWS dynamic cluster management service

--- a/examples/dynamic_cloud_cluster.ipynb
+++ b/examples/dynamic_cloud_cluster.ipynb
@@ -117,8 +117,8 @@
    "outputs": [],
    "source": [
     "# Trains-Agent Queues - Machines budget per Queue\n",
-    "# Per queue: list of (machine type as defined in RESOURCE_CONFIGURATIONS, max instances for the specific queue).\n",
-    "# Order machines from most preferred to least.\n",
+    "# Per queue: list of (machine type as defined in RESOURCE_CONFIGURATIONS,\n",
+    "# max instances for the specific queue). Order machines from most preferred to least.\n",
     "QUEUES = {\n",
     "    \"aws_normal\": [(\"amazon_ec2_normal\", 2),],\n",
     "    \"aws_high\": [(\"amazon_ec2_high\", 1)],\n",
