Fix trains.conf injection in AWS dynamic cluster management service

--- a/examples/dynamic_cloud_cluster.ipynb
+++ b/examples/dynamic_cloud_cluster.ipynb
@@ -279,7 +279,7 @@
     "    sudo python3 -m pip install trains-agent\n",
     "    echo 'agent.git_user=\\\"{git_user}\\\"' >> /root/trains.conf\n",
     "    echo 'agent.git_pass=\\\"{git_pass}\\\"' >> /root/trains.conf\n",
-    "    echo {trains_conf} >> /root/trains.conf\n",
+    "    echo \"{trains_conf}\" >> /root/trains.conf\n",
     "    export TRAINS_API_HOST={api_server}\n",
     "    export TRAINS_WEB_HOST={web_server}\n",
     "    export TRAINS_FILES_HOST={files_server}\n",
