--- a/examples/dynamic_cloud_cluster.ipynb
+++ b/examples/dynamic_cloud_cluster.ipynb
@@ -275,7 +275,8 @@
     "    sudo apt-get install -y python3-pip\n",
     "    sudo apt-get install -y gcc\n",
     "    sudo apt-get install -y git\n",
-    "    sudo python3 -m pip install screen\n",
+    "    sudo apt-get install -y build-essential\n",
+python3 -m pip install screen\n",
     "    sudo python3 -m pip install trains-agent\n",
     "    echo 'agent.git_user=\\\"{git_user}\\\"' >> /root/trains.conf\n",
     "    echo 'agent.git_pass=\\\"{git_pass}\\\"' >> /root/trains.conf\n",
