Run under virtualenv in AWS dynamic cluster management service

--- a/examples/dynamic_cloud_cluster.ipynb
+++ b/examples/dynamic_cloud_cluster.ipynb
@@ -269,15 +269,18 @@
     "    # user_data script will automatically run when the instance is started. \n",
     "    # It will install the required packages for trains-agent configure it using \n",
     "    # environment variables and run trains-agent on the required queue\n",
-    "    user_data = \"\"\"#!/bin/bash \n",
+    "    user_data = \"\"\"#!/bin/bash\n",
     "    sudo apt-get update\n",
     "    sudo apt-get install -y python3-dev\n",
     "    sudo apt-get install -y python3-pip\n",
     "    sudo apt-get install -y gcc\n",
     "    sudo apt-get install -y git\n",
     "    sudo apt-get install -y build-essential\n",
-python3 -m pip install screen\n",
-    "    sudo python3 -m pip install trains-agent\n",
+    "    python3 -m pip install -U pip\n",
+    "    python3 -m pip install virtualenv\n",
+    "    python3 -m virtualenv trains_agent_venv\n",
+    "    source trains_agent_venv/bin/activate\n",
+    "    python -m pip install trains-agent\n",
     "    echo 'agent.git_user=\\\"{git_user}\\\"' >> /root/trains.conf\n",
     "    echo 'agent.git_pass=\\\"{git_pass}\\\"' >> /root/trains.conf\n",
     "    echo \"{trains_conf}\" >> /root/trains.conf\n",
@@ -288,9 +291,8 @@ python3 -m pip install screen\n",
     "    export TRAINS_WORKER_ID={worker_id}:$DYNAMIC_INSTANCE_ID\n",
     "    export TRAINS_API_ACCESS_KEY='{access_key}'\n",
     "    export TRAINS_API_SECRET_KEY='{secret_key}'\n",
-    "    screen\n",
     "    {bash_script}\n",
-    "    python3 -m trains_agent --config-file '/root/trains.conf' daemon --queue '{queue}' {docker}\n",
+    "    python -m trains_agent --config-file '/root/trains.conf' daemon --queue '{queue}' {docker}\n",
     "    shutdown\n",
     "    \"\"\".format(\n",
     "        api_server=TRAINS_SERVER_API_SERVER,\n",
