--- a/examples/dynamic_cloud_cluster.ipynb
+++ b/examples/dynamic_cloud_cluster.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Auto-Magically Spin AWS EC2 Instances on Demand \n",
-    "# And Create a Dynamic Cluster Running *Trains-Agent*\n",
+    "# Auto-Magically Spin AWS EC2 Instances On Demand \n",
+    "# and Create a Dynamic Cluster Running *Trains-Agent*\n",
     "\n",
-    "### Define your budget and execute the notebook, That's is it\n",
+    "### Define your budget and execute the notebook, that's it\n",
     "### You now have a fully managed cluster on AWS  🎉 🎊 "
    ]
   },
