Add .bashrc reloading before running trains-agent in the AWS dynamic cluster management service

--- a/examples/dynamic_cloud_cluster.ipynb
+++ b/examples/dynamic_cloud_cluster.ipynb
@@ -292,6 +292,7 @@
     "    export TRAINS_API_ACCESS_KEY='{access_key}'\n",
     "    export TRAINS_API_SECRET_KEY='{secret_key}'\n",
     "    {bash_script}\n",
+    "    source ~/.bashrc\n",
     "    python -m trains_agent --config-file '/root/trains.conf' daemon --queue '{queue}' {docker}\n",
     "    shutdown\n",
     "    \"\"\".format(\n",
