Update docker versions

--- a/examples/dynamic_cloud_cluster.ipynb
+++ b/examples/dynamic_cloud_cluster.ipynb
@@ -156,7 +156,7 @@
     "TRAINS_GIT_PASS = \"\"\n",
     "\n",
     "# Additional fields for trains.conf file created on the remote instance\n",
-    "# for example: 'agent.default_docker.image: \"nvidia/cuda:10.0-cudnn7-runtime\"'\n",
+    "# for example: 'agent.default_docker.image: \"nvidia/cuda:11.0.3-cudnn8-runtime-ubuntu20.04\"'\n",
     "EXTRA_TRAINS_CONF = \"\"\"\n",
     "\"\"\"\n",
     "\n",
